force-app/main/default/objects/OnsightWorkspaceDocument__c/OnsightWorkspaceDocument__c.object-meta.xml
<CustomObject>
    <label>Onsight Workspace Document</label>
    <nameField>
        <label>Document Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onsight Workspace Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>