force-app/main/default/objects/OnsightWorkspaceDocument__c/fields/Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Download_URL__c</fullName>
    <label>Download URL</label>
    <type>Url</type>
</CustomField>