force-app/main/default/objects/OnsightWorkspaceDocument__c/fields/External_Metadata__c.field-meta.xml
<CustomField>
    <fullName>External_Metadata__c</fullName>
    <label>External Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>