force-app/main/default/objects/OnsightWorkspaceDocument__c/fields/Onsight_Connect_Call__c.field-meta.xml
<CustomField>
    <fullName>Onsight_Connect_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsight Connect Call</label>
    <referenceTo>OnsightConnectCall__c</referenceTo>
    <relationshipLabel>Onsight Workspace Documents</relationshipLabel>
    <relationshipName>Onsight_Workspace_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>