force-app/main/default/objects/OnsightWorkspaceDocument__c/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <description>The ID of the Onsight Call document which contains this asset document.</description>
    <label>Parent ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>