force-app/main/default/objects/OnsightWorkspaceDocument__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The Onsight Document type.</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>